# green-agent-age-of-inference-ii

./: README.md  analyze_parsed_data.py  codebase_documentation.md  collect_python_codebase_info.py  collect_python_codebase_info_v2.py  condensed_codebase_doc.md  conduct_interviews.py  conduct_interviews_old.py  generate_recommendations.py  generate_recommendations_final.py  generate_recommendations_old.py  generic_s3_downloader.py  inspect_problematic_records.py  main.py  parse_data.py  pyproject.toml  reformat_submission.py  reformat_submission_old.py  run_startup.sh  submit.py  test_notebook.ipynb
data/: parsed_jobs.json  parsed_trainings.json  parsing_metadata.json
data/interviews/: interview_metadata.json  (+100 more)
data/jobs/: j0.md  (+199 more)
docs/: GDSC API Documentation.md  ai_coding_instructions.md  condensed_codebase_doc.md  design.md  design_v2.md  design_v3.md  development_environment.md  learning_log.md  pocketflow.md  scoring_system.md  terminal_training.md
notebooks/: 01_data_exploration.ipynb  01_data_exploration.ipynb.ipynb  01_data_exploration.md
output/: recommendation_metadata.json  submission.json
output_pass1/: submission.json
output_pass2/: recommendation_metadata.json  submission.json
output_submission1/: recommendation_metadata.json  submission.json  submission_final.json
output_v2/: submission.json
output_v2correct/: recommendation_metadata.json  submission.json
src/: flow.py  flow_old.py  nodes.py  nodes_old.py
tests/: test_call_llm.py  test_data_retrieval.py  test_integration.py  test_matching_rules.py  test_nodes.py
utils/: s3_helper.py
(+768 files in other folders)
