[project]
name = "green-agent-age-of-inference-ii"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.40.55",
    "dotenv>=0.9.9",
    "mistralai>=1.9.11",
    "python-dotenv>=1.1.1",
]
[project.optional-dependencies]
dev = ["ipykernel"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
